--- a/connections/connect/package.json
+++ b/connections/connect/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.6",
+    "@reown/appkit": "^1.7.8",
+    "@reown/appkit-adapter-wagmi": "^1.7.8",
+    "@tanstack/react-query": "^5.80.6",
+    "ethers": "^6.14.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "viem": "^2.30.6",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
